--- a/pizzon/package.json
+++ b/pizzon/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
